Adding cart and Products category page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -19,193 +19,6 @@
   },
   "imports": [
     {
-      "path": "scss/bootstrap-material-design.scss",
-      "imports": [
-        "scss/_core.scss",
-        "scss/_variables.scss",
-        "scss/_mixins.scss",
-        "scss/_reboot.scss",
-        "scss/_layout.scss",
-        "scss/_buttons.scss",
-        "scss/_checkboxes.scss",
-        "scss/_custom-forms.scss",
-        "scss/_switches.scss",
-        "scss/_radios.scss",
-        "scss/_forms.scss",
-        "scss/_input-group.scss",
-        "scss/_list-group.scss",
-        "scss/_tables.scss",
-        "scss/_nav.scss",
-        "scss/_navbar.scss",
-        "scss/_alerts.scss",
-        "scss/_progress.scss",
-        "scss/_pagination.scss",
-        "scss/_type.scss",
-        "scss/_tooltip.scss",
-        "scss/_popover.scss",
-        "scss/_cards.scss",
-        "scss/_modal.scss",
-        "scss/_dropdown.scss",
-        "scss/_drawer.scss",
-        "scss/_themes.scss",
-        "scss/_ripples.scss",
-        "scss/_extensions.scss",
-        "scss/variables/_colors.scss",
-        "scss/variables/_shadow.scss",
-        "scss/variables/bootstrap/_components.scss",
-        "scss/variables/bootstrap/_custom-forms.scss",
-        "scss/variables/bootstrap/_spacing.scss",
-        "scss/variables/bootstrap/_body.scss",
-        "scss/variables/bootstrap/_buttons.scss",
-        "scss/variables/bootstrap/_card.scss",
-        "scss/variables/bootstrap/_code.scss",
-        "scss/variables/bootstrap/_dropdown.scss",
-        "scss/variables/bootstrap/_forms.scss",
-        "scss/variables/bootstrap/_list-group.scss",
-        "scss/variables/bootstrap/_nav.scss",
-        "scss/variables/bootstrap/_pagination.scss",
-        "scss/variables/bootstrap/_state.scss",
-        "scss/variables/bootstrap/_tables.scss",
-        "scss/variables/bootstrap/_tooltip.scss",
-        "scss/variables/bootstrap/_type.scss",
-        "scss/variables/bootstrap/_modals.scss",
-        "scss/variables/_layout.scss",
-        "scss/variables/_menu.scss",
-        "scss/variables/_drawer.scss",
-        "scss/variables/_snackbar.scss",
-        "scss/mixins/_utilities.scss",
-        "scss/mixins/_breakpoints.scss",
-        "scss/mixins/_animations.scss",
-        "scss/mixins/_type.scss",
-        "scss/mixins/_layout.scss",
-        "scss/mixins/_drawer.scss",
-        "scss/mixins/_forms.scss",
-        "scss/mixins/_buttons.scss",
-        "scss/mixins/_hover.scss",
-        "scss/mixins/_navs.scss",
-        "scss/extensions/_snackbarjs.scss",
-        "scss/extensions/_selectize.scss"
-      ]
-    },
-    {
-      "path": "scss/_core.scss",
-      "imports": [
-        "scss/_variables.scss",
-        "scss/_mixins.scss",
-        "scss/_reboot.scss",
-        "scss/_layout.scss",
-        "scss/_buttons.scss",
-        "scss/_checkboxes.scss",
-        "scss/_custom-forms.scss",
-        "scss/_switches.scss",
-        "scss/_radios.scss",
-        "scss/_forms.scss",
-        "scss/_input-group.scss",
-        "scss/_list-group.scss",
-        "scss/_tables.scss",
-        "scss/_nav.scss",
-        "scss/_navbar.scss",
-        "scss/_alerts.scss",
-        "scss/_progress.scss",
-        "scss/_pagination.scss",
-        "scss/_type.scss",
-        "scss/_tooltip.scss",
-        "scss/_popover.scss",
-        "scss/_cards.scss",
-        "scss/_modal.scss",
-        "scss/_dropdown.scss",
-        "scss/_drawer.scss",
-        "scss/_themes.scss",
-        "scss/_ripples.scss",
-        "scss/_extensions.scss",
-        "scss/variables/_colors.scss",
-        "scss/variables/_shadow.scss",
-        "scss/variables/bootstrap/_components.scss",
-        "scss/variables/bootstrap/_custom-forms.scss",
-        "scss/variables/bootstrap/_spacing.scss",
-        "scss/variables/bootstrap/_body.scss",
-        "scss/variables/bootstrap/_buttons.scss",
-        "scss/variables/bootstrap/_card.scss",
-        "scss/variables/bootstrap/_code.scss",
-        "scss/variables/bootstrap/_dropdown.scss",
-        "scss/variables/bootstrap/_forms.scss",
-        "scss/variables/bootstrap/_list-group.scss",
-        "scss/variables/bootstrap/_nav.scss",
-        "scss/variables/bootstrap/_pagination.scss",
-        "scss/variables/bootstrap/_state.scss",
-        "scss/variables/bootstrap/_tables.scss",
-        "scss/variables/bootstrap/_tooltip.scss",
-        "scss/variables/bootstrap/_type.scss",
-        "scss/variables/bootstrap/_modals.scss",
-        "scss/variables/_layout.scss",
-        "scss/variables/_menu.scss",
-        "scss/variables/_drawer.scss",
-        "scss/variables/_snackbar.scss",
-        "scss/mixins/_utilities.scss",
-        "scss/mixins/_breakpoints.scss",
-        "scss/mixins/_animations.scss",
-        "scss/mixins/_type.scss",
-        "scss/mixins/_layout.scss",
-        "scss/mixins/_drawer.scss",
-        "scss/mixins/_forms.scss",
-        "scss/mixins/_buttons.scss",
-        "scss/mixins/_hover.scss",
-        "scss/mixins/_navs.scss",
-        "scss/extensions/_snackbarjs.scss",
-        "scss/extensions/_selectize.scss"
-      ]
-    },
-    {
-      "path": "scss/_extensions.scss",
-      "imports": [
-        "scss/extensions/_snackbarjs.scss",
-        "scss/extensions/_selectize.scss"
-      ]
-    },
-    {
-      "path": "scss/_mixins.scss",
-      "imports": [
-        "scss/mixins/_utilities.scss",
-        "scss/mixins/_breakpoints.scss",
-        "scss/mixins/_animations.scss",
-        "scss/mixins/_type.scss",
-        "scss/mixins/_layout.scss",
-        "scss/mixins/_drawer.scss",
-        "scss/mixins/_forms.scss",
-        "scss/mixins/_buttons.scss",
-        "scss/mixins/_hover.scss",
-        "scss/mixins/_navs.scss"
-      ]
-    },
-    {
-      "path": "scss/_variables.scss",
-      "imports": [
-        "scss/variables/_colors.scss",
-        "scss/variables/_shadow.scss",
-        "scss/variables/bootstrap/_components.scss",
-        "scss/variables/bootstrap/_custom-forms.scss",
-        "scss/variables/bootstrap/_spacing.scss",
-        "scss/variables/bootstrap/_body.scss",
-        "scss/variables/bootstrap/_buttons.scss",
-        "scss/variables/bootstrap/_card.scss",
-        "scss/variables/bootstrap/_code.scss",
-        "scss/variables/bootstrap/_dropdown.scss",
-        "scss/variables/bootstrap/_forms.scss",
-        "scss/variables/bootstrap/_list-group.scss",
-        "scss/variables/bootstrap/_nav.scss",
-        "scss/variables/bootstrap/_pagination.scss",
-        "scss/variables/bootstrap/_state.scss",
-        "scss/variables/bootstrap/_tables.scss",
-        "scss/variables/bootstrap/_tooltip.scss",
-        "scss/variables/bootstrap/_type.scss",
-        "scss/variables/bootstrap/_modals.scss",
-        "scss/variables/_layout.scss",
-        "scss/variables/_menu.scss",
-        "scss/variables/_drawer.scss",
-        "scss/variables/_snackbar.scss"
-      ]
-    },
-    {
       "path": "scss/main.scss",
       "imports": [
         "scss/lib/variables.scss",
@@ -222,31 +35,15 @@
         "scss/lib/footer.scss",
         "scss/lib/product-grid.scss",
         "scss/lib/filter-search.scss",
-        "scss/lib/cards.scss"
-      ]
-    },
-    {
-      "path": "js/vendor/summernote/src/less/summernote-bs4.scss",
-      "imports": [
-        "js/vendor/summernote/src/less/elements.scss"
-      ]
-    },
-    {
-      "path": "css/plugins/fontawesome/scss/v4-shims.scss",
-      "imports": [
-        "css/plugins/fontawesome/scss/_variables.scss",
-        "css/plugins/fontawesome/scss/_shims.scss"
-      ]
-    },
-    {
-      "path": "js/vendor/bootstrap-select/less/bootstrap-select.less",
-      "imports": [
-        "js/vendor/bootstrap-select/less/variables.less"
+        "scss/lib/cards.scss",
+        "scss/lib/tables.scss",
+        "scss/lib/tooltip.scss",
+        "scss/lib/animaciones.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -356,7 +153,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"relative\":\"../css\"},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\",\"cssnext\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"relative\":\"../css\"},\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-cssnext\":{\"enabled\":false},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
